k8s/12-inference-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: kirk-gpt-inference
  namespace: kirk-gpt

  labels:
    app: kirk-gpt-inference


spec:
  selector:
    app: kirk-gpt-inference

  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP

  type: ClusterIP
