k8s/13-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: kirk-gpt-inference
  namespace: kirk-gpt


spec:
  ingressClassName: nginx

  rules:
    - host:
        kirk-gpt.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name:
                  kirk-gpt-inference

                port:
                  number: 8000
